<resources>
    <string name="app_name">androidComidaRapida</string>
    <string name="mimapa">mimapa</string>
    <string name="title_activity_camara">camara</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_registro2resttaurant">registro2resttaurant</string>
    <string name="title_activity_registro_dos">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Crear Menu</string>
    <string name="title_notifications">Seleccionar un lugar</string>
    <string name="title_hacerPedidos">Hacer pedido</string>
    <string name="title_ordenes">Ordenes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_registro_restaurtant">registroRestaurtant</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_registro_camara">registroCamara</string>
    <string name="title_activity_add">Add</string>
    <string name="title_activity_lista_restaurantes">ListaRestaurantes</string>
    <string name="title_activity_item_restaurant">ItemRestaurant</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="restaurant">Restaurant</string>
    <string name="todo">TODO</string>
    <string name="title_activity_menu">Menu</string>
    <string name="eliminar">Eliminar</string>
    <string name="crear_menu">Crear menu</string>
    <string name="insertar">insertar</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="descripcion">Descripcion</string>
    <string name="precio">Precio</string>
    <string name="nombre">Nombre</string>
    <string name="registro_de_restaurant">Registro de Restaurant</string>
    <string name="calle">Calle</string>
    <string name="title_activity_lista_menu">listaMenu</string>


</resources>