<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_outline_menu_book_24"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_sharp_near_me_24"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/hacerPedido"
        android:icon="@drawable/ic_baseline_add_shopping_cart_24"
        android:title="@string/title_hacerPedidos" />
    <item
        android:id="@+id/ordenes"
        android:icon="@drawable/ic_baseline_fastfood_24"
        android:title="@string/title_ordenes" />

</menu>