<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.androidcomidarapida.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.androidcomidarapida.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.androidcomidarapida.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/hacerPedido"
        android:name="com.example.androidcomidarapida.hacerPedido"
        android:label="fragment_hacer_pedido"
        tools:layout="@layout/fragment_hacer_pedido" />
    <fragment
        android:id="@+id/ordenes"
        android:name="com.example.androidcomidarapida.ordenes"
        android:label="fragment_ordenes"
        tools:layout="@layout/fragment_ordenes" />

</navigation>